# wreq-proto

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  socks.yml
bench/: body.rs  end_to_end.rs  support.rs
dev/bench/: data.js
src/: body.rs  config.rs  dispatch.rs  error.rs  ext.rs  lib.rs  proto.rs  rt.rs  sync.rs  upgrade.rs
src/body/: incoming.rs  length.rs  watch.rs
src/conn/: http1.rs  http2.rs
src/ext/: h1_reason_phrase.rs  header_preserve.rs  informational.rs  preserve_header.rs
src/proto/: headers.rs  http1.rs  http2.rs
src/proto/http1/: buf.rs  conn.rs  decode.rs  dispatch.rs  encode.rs  io.rs  role.rs
src/proto/http2/: client.rs  ping.rs
src/rt/: bounds.rs  timer.rs  tokio.rs
tests/: client.rs  integration.rs
tests/support/: header.rs  mod.rs  rt.rs  tokiort.rs  trailers.rs
wreq-proto/: CHANGELOG.md  Cargo.toml  LICENSE
wreq-proto/bench/: body.rs  end_to_end.rs  support.rs
wreq-proto/src/: body.rs  conn.rs  dispatch.rs  error.rs  ext.rs  lib.rs  proto.rs  rt.rs  trace.rs  upgrade.rs
wreq-proto/src/body/: incoming.rs  length.rs  watch.rs
wreq-proto/src/conn/: http1.rs  http2.rs
wreq-proto/src/ext/: h1_reason_phrase.rs  informational.rs  preserve_header.rs
wreq-proto/src/proto/: headers.rs  http1.rs  http2.rs
wreq-proto/src/proto/http1/: buf.rs  conn.rs  decode.rs  dispatch.rs  encode.rs  io.rs  role.rs
wreq-proto/src/proto/http2/: client.rs  ping.rs
wreq-proto/src/rt/: bounds.rs  timer.rs
wreq-proto/tests/: client.rs  integration.rs
wreq-proto/tests/h1_server/: fixture.rs  mod.rs
wreq-proto/tests/support/: header.rs  mod.rs  rt.rs  tokiort.rs  trailers.rs
wreq-rt/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
wreq-rt/src/: compio.rs  conn.rs  dns.rs  lib.rs  rt.rs  timer.rs  tokio.rs
wreq-rt/src/compio/: future.rs  io.rs
wreq-rt/src/rt/: compio.rs  tokio.rs
wreq-rt/src/rt/compio/: io.rs
wreq-socks/: Cargo.toml  LICENSE  README.md
wreq-socks/examples/: chainproxy.rs  socket.rs  tor.rs  udp_associate.rs
wreq-socks/src/: error.rs  lib.rs
wreq-socks/src/io/: compat.rs  mod.rs  tokio.rs
wreq-socks/src/io/compat/: futures.rs
wreq-socks/src/tcp/: socks4.rs  socks5.rs
wreq-socks/src/udp/: mod.rs  socks5.rs
wreq-socks/tests/: long_username_password_auth.rs  no_auth.rs  socks4_no_auth.rs  socks4_userid.rs  udp_associate.rs  username_auth.rs
wreq-socks/tests/common/: futures_utils.rs  mod.rs  tokio_utils.rs
