[package]
name = "wreq-proto"
version = "0.1.0"
description = "wreq low-level HTTP protocol implementation"
keywords = ["http", "client"]
categories = ["web-programming::http-client"]
repository = "https://github.com/0x676e67/wreq-proto"
documentation = "https://docs.rs/wreq-proto"
authors = ["0x676e67 <gngppz@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.85"
include = ["README.md", "LICENSE", "src/**/*.rs"]

[features]

# Enable tracing logging.
tracing = ["dep:tracing", "http2/tracing", "tracing?/std"]

# Enables the `parking_lot` crate for synchronization primitives.
parking_lot = ["dep:parking_lot", "http2/parking_lot"]

[dependencies]
bytes = "1.11.1"
http = "1.4.0"
http2 = { version = "0.5.16", features = ["unstable"] }
httparse = "1.10.1"
http-body = "1.0.1"
want = "0.3.1"
pin-project-lite = "0.2.17"
futures-util = { version = "0.3.32", default-features = false }
smallvec = { version = "1.15.1", features = ["const_generics", "const_new"] }
tokio = { version = "1.52.1", default-features = false, features = [
    "net",
    "time",
    "rt",
] }
tokio-util = { version = "0.7.18", default-features = false }

# Optional deps...

tracing = { version = "0.1", default-features = false, optional = true }
parking_lot = { version = "0.12.5", optional = true }


[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tokio-test = "0.4.5"
http-body-util = "0.1.3"
pretty_env_logger = "0.5"