[package]
name = "wreq-rt"
version = "0.2.2-rc.4"
description = "Runtime utilities for wreq"
keywords = ["http", "client"]
categories = ["web-programming::http-client"]
repository = { workspace = true }
documentation = "https://docs.rs/wreq-rt"
authors = ["0x676e67 <gngppz@gmail.com>"]
readme = "README.md"
license = { workspace = true }
edition = "2024"
rust-version = { workspace = true }
include = ["README.md", "LICENSE", "src/**/*.rs"]

[features]
# Enable tokio as the async runtime (default).
tokio-rt = ["tokio/rt", "tokio/net", "tokio/time", "dep:pin-project-lite", "dep:futures-util"]

# Enable compio as the async runtime (completion-based, io_uring/IOCP).
compio-rt = ["dep:compio", "compio?/runtime", "compio/net", "compio?/time", "dep:send_wrapper", "dep:futures-util"]

[dependencies]
tokio = { workspace = true, default-features = false }
compio = { version = "0.19.0-rc.1", features = ["io", "io-compat"], optional = true }
send_wrapper = { version = "0.6.0", optional = true }
pin-project-lite = { version = "0.2.17", optional = true }
futures-util = { version = "0.3.32", default-features = false, optional = true }
