[package]
name = "wreq-socks"
description = "Asynchronous SOCKS proxy support for Rust."
documentation = "https://docs.rs/wreq-socks"
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"
categories = ["asynchronous", "network-programming"]
keywords = ["tokio", "async", "proxy", "socks", "socks5"]
license = "MIT"
version = "0.1.0"
authors = ["0x676e67 <gngppz@gmail.com>", "Yilin Chen <sticnarf@gmail.com>"]
edition = "2024"

[features]
default = ["tokio"]
tor = []

[dependencies]
futures-util = { version = "0.3", default-features = false }
futures-io = { version = "0.3", optional = true }
tokio = { version = "1.0", features = ["io-util", "net"], optional = true }
either = "1"
thiserror = "2.0.18"

[dev-dependencies]
futures-executor = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["io"] }
tokio = { version = "1.0", features = ["io-util", "rt-multi-thread", "net"] }
once_cell = "1.2.0"
smol = "2.0.0"

[[example]]
name = "chainproxy"
required-features = ["tokio"]

[[example]]
name = "socket"
required-features = ["tokio", "tor"]

[[example]]
name = "tor"
required-features = ["tokio", "tor"]